# vic

./: .clang-format  .gitignore  CMakeLists.txt  projects.sln  vic.cpp  vic.h
vic/: CMakeLists.txt  Emulator.h  EntitySystem.h  EventQueue.h  Graph.h  utils.h  vic.cpp  vic.vcxproj  vic.vcxproj.filters
vic/emulation/: Emulator.h
vic/entity_system/: algorithms.h  collection.h  definitions.h  ecs.h  entity_system.h  system_executor.h
vic/geometry/: geometry.h  mesh.h  parametric.h
vic/geometry/algorithms/: algorithms.h  assignment_problem.h  balanced_aabb_tree.h  bbox_tree.h  delaunay.h  intersections.h  interval_heap.h
vic/graph/: algorithms.h  definitions.h  graph.h  iterators.h  tensor_graph.h  traits.h
vic/graph/algorithms/: a_star.h  dijkstra.h  floyd_warshall.h  m_star.h
vic/graph/graph_types/: adjecency_list.h  base.h  cartesian_product_graph.h
vic/graph2/: definitions.h  graph.h  traits.h
vic/graph2/algorithms/: algorithms.h  astar.h  dijkstra.h  floyd_warshall.h  iterator.h  mstar.h  path.h  vertex.h
vic/graph2/graph_types/: base_graph.h  cartesian_product_graph.h
vic/image/: image.h
vic/kinematics/: kinematics.h  math.h  rotation.h  transformation.h  translation.h
vic/kinematics/algorithms/: forward_kinematics.h
vic/kinematics/robot/: node.h  robot.h
vic/linalg/: add.h  cross.h  definitions.h  determinant.h  index.h  inverse.h  linalg.h  matmul.h  matrices.h  matrices_dynamic.h  matrices_sparse.h  matrices_view.h  matrix_view.h  solve.h  tools.h  traits.h  transpose.h
vic/linalg/algorithms/: add.h  adjugate.h  determinant.h  eigenvalues.h  inverse.h  least_squares.h  lu_decomposition.h  matmul.h  solve.h  transpose.h
vic/linalg/matrices/: base.h  diagonal.h  identity.h  matrix.h  ones.h  sparse.h  stack.h  tridiagonal.h  zeros.h
vic/linprog/: seidel.h
vic/machine_learning/: back_propagation.h  definitions.h  layer.h  machine_learning.h  mapping.h
vic/memory/: ab_tree.h  constexpr_map.h  dense_map.h  event_queue.h  flat_linked_list.h  flat_map.h  flat_set.h  garbage_collector.h  merge_sort.h  nmap.h  refcounter.h  ring_buffer.h  tree.h
vic/network/: binary_conversion.h  i2c.h  udp.h
vic/physics/rendering/: rendering_equation.h
vic/serialize/: serialize.h
vic/simulations/: de_rham.h
vic/simulations/cfd/: mesh.h
vic/symbolic/: symbolic.h
vic/units/: tensors.h  units.h
vic/utils/: Counted.h  algorithms.h  as_tuple.h  concepts.h  crc32.h  decimal.h  erorr.h  error.h  file.h  heap.h  indexing.h  map_iterate.h  math.h  observable.h  permutations.h  ranges.h  rational.h  result.h  serialize.h  statemachine.h  string.h  templates.h  templates_numeric.h  timing.h  to.h  to_string.h  trispan.h  try.h  unique.h  variant.h
vic_benchmark/: CMakeLists.txt  FirstBenchmark.cpp  LinalgMatmul.cpp
vic_gtests/: CMakeLists.txt  Emulation.cpp  EntitySystem.cpp  EventQueue.cpp  GarbageCollection.cpp  Geometry.cpp  Graph.cpp  Graph2.cpp  Images.cpp  Kinematics.cpp  Linprog.cpp  Math.cpp  Memory.cpp  Network.cpp  Serialize.cpp  SerializeHelpers.h  Simulations.cpp  Symbolic.cpp  TestEntitySystem.cpp  TestEventQueue.cpp  TestGarbageCollection.cpp  TestGeometry.cpp  TestGraph.cpp  TestImages.cpp  TestKinematics.cpp  TestLinalg.cpp  TestLinprog.cpp  TestMachineLearning.cpp  TestMemory.cpp  TestNetwork.cpp  TestSimulations.cpp  TestSymbolic.cpp  TestTree.cpp  TestUnits.cpp  TestUtils.cpp  TestUtpNetwork.cpp  TestViews.cpp  Tree.cpp  Units.cpp  Utils.cpp  (+7 more)
vic_gtests/graph/: AdjecencyGraph.cpp
vic_gtests/linalg/: Add.cpp  Algorithms.cpp  Inverse.cpp  LeastSquares.cpp  Linalg.cpp  Matmul.cpp  Matrices.cpp  Solve.cpp  TestAdd.cpp  TestAlgorithms.cpp  TestInverse.cpp  TestLeastSquares.cpp  TestLinalg.cpp  TestMatmul.cpp  TestMatrices.cpp  TestSolve.cpp  TestTools.cpp  TestTraits.cpp  TestTranspose.cpp  TestViews.cpp  Tools.cpp  Traits.cpp  Transpose.cpp  Views.cpp
